--- a/vignettes/Week6_Selection/Week6_vignette.Rmd
+++ b/vignettes/Week6_Selection/Week6_vignette.Rmd
@@ -18,7 +18,7 @@ vignette: >
 
 ### a) Goals 
 
-**Justification**: Natural selection acts on the heritable component of the total phenotypic variation. Traditionally, the heritable proportion of trait variation is estimated using information on the degree of relatedness between individuals. This approach - extensively employed in breeding and evolutionary quantitative genetics – ignores the molecular underpinnings of traits. An alternative approach is  scanning genomes using molecular markers to search for so-called outlier loci (see week 11), where selection invoked a change in allele frequencies that is detectable as unusual differentiation between populations in different environments. This approach – advocated in population genetics - neglects information about the trait variation, but assumes that the markers are in or close to genes that code for adaptive traits. Genetic outliers often hard to interpret because generally we lack information what phenotype they affect and if this phenotype results in fitness differences between populations. 
+**Justification**: Natural selection acts on the heritable component of the total phenotypic variation. Traditionally, the heritable proportion of trait variation is estimated using information on the degree of relatedness between individuals. This approach (degree of relatedness) - extensively employed in breeding and evolutionary quantitative genetics – ignores the molecular underpinnings of traits. An alternative approach is  scanning genomes using molecular markers to search for so-called outlier loci (see week 11), where selection invoked a change in allele frequencies that is detectable as unusual differentiation between populations in different environments. This approach (outlier loci) – advocated in population genetics - neglects information about the trait variation, but assumes that the markers are in or close to genes that code for adaptive traits. Genetic outliers often hard to interpret because generally we lack information what phenotype they affect and if this phenotype results in fitness differences between populations. 
 
 **Learning Objectives**: This lab was constructed to give you experience in working with basic quantitative and population genetic analyses to test hypotheses about the presence of local adaptation. Similar to the genomic revolution,  phenotyping is also undergoing a revolution thanks to developments e.g. in imagery that allow for a highly automated recording of traits; a task that has been extremely time consuming in the past. These developments will certainly advance the quantitative genetic approach in the future in evolutionary biology let alone breeding. By the end of the laboratory, you should be able to do the following:
 
@@ -34,7 +34,7 @@ The data come from a study of western white pine (Pinus monticola Dougl. ex D. D
 We will thus have the following data:
 
 - **WWP_phenotype_data.txt**: Phenotypic measurements for 5 seedlings per tree made in a common garden.
-- **WWP.ecogen**: an 'ecogen' object (package 'EcoGenetics') with SNP genotypes for all trees sampled in the field, and with environmental data collected from each plot within each population.
+- **WWP.ecogen**: an `ecogen` object (package `EcoGenetics`) with SNP genotypes for all trees sampled in the field, and with environmental data collected from each plot within each population.
 
 ### c) Required R packages
 
@@ -60,7 +60,7 @@ library(tibble)
 #require(car)  
 ```
 
-Package 'ggeffects' not automatically installed with 'LandGenCourse':
+Package `ggeffects` not automatically installed with `LandGenCourse`:
 
 ```{r message=FALSE, warning=TRUE}
 if(!require(ggeffects)) install.packages("ggeffects", repos='http://cran.us.r-project.org')
@@ -89,7 +89,7 @@ phen <- read.delim(system.file("extdata", "WWP_phenotype_data.txt",
 tibble::as_tibble(phen)
 ```
 
-Check the variable types: 'family' and 'block' have been imported as type 'integer', and we need to convert them to 'factor' first.
+Check the variable types: `family` and `block` have been imported as type "integer", and we need to convert them to "factor" first.
 
 ```{r}
 phen$family <- as.factor(phen$family)
@@ -100,12 +100,14 @@ sapply(phen, class)
 ### b) Fit linear mixed effects models (LMM) to trait data observed on families
 
 Now,we are ready to fit a series of linear models. Here we will fit four models in total, though the last two are equivalent for our data: 
-- **mod1**: a model with only fixed effects (intercept and block), 
-- **mod2**:a LMM with an fixed effects and a random effect due to family, and 
-- **mod3**:a LMM where the random effect due to family is nested within population. We will thus be ignoring the variable "plot".
-- **mod4**:a LMM where the nesting of family within population is not explicitly specified, it is implied by the data. 
+- **mod1**: a model with only fixed effects (`intercept` and `block`), 
+- **mod2**: a LMM with the fixed effects and a random effect due to `family`, and 
+- **mod3**: a LMM where the random effect due to `family` is nested within `population`. We will thus be ignoring the variable `plot`.
+- **mod4**: a LMM where the nesting of `family` within `population` is not explicitly specified, it is implied by the data. This model makes sense only if each family has a unique ID, so that there are no families from other populations that have the same ID. 
 
-Note: 'd13c ~ 1 + block' is equivalent to 'd13c ~ block' (see video, Part 1). 
+**Disclaimer**: `mod1` is not a valid model because it ignores the pseudo-replication that arises from the hierarchical sampling design. The goal of using random effects (for family, or family and plot), in the other models is to account for this.
+
+Note: `d13c ~ 1 + block` is equivalent to `d13c ~ block` (see video, Part 1). 
 
 ```{r}
 mod1 <- lm(d13c ~ block, data = phen)
@@ -116,20 +118,22 @@ mod4 <- lme4::lmer(d13c ~ 1 + (1|population) + (1|family) + block,
                    data = phen, REML = TRUE)
 ```
 
-Models 'mod3' and 'mod4' produce identical results, as long as each family has its own unique ID. In the following, we will use 'mod4' as it simplifies interpretation (as commonly used in quantitative genetics).
+Models `mod3` and `mod4` produce identical results, **as long as each family has its own unique ID**. In the following, we will use `mod4` as it simplifies interpretation (as commonly used in quantitative genetics).
 
-Notice that we are using REML=TRUE, which stands for restricted maximum likelihood. This method is advised for quantitative genetic analysis, because it provides unbiased estimates of the variance components. The other approach would be to use ML or maximum likelihood, however, it generally underestimates the residual variance, thus leading to inflated estimates of the family variance and thus the heritability. ML would be needed e.g. to test fixed effects.
+Notice that we are using `REML=TRUE`, which stands for restricted maximum likelihood. This method is advised for quantitative genetic analysis, because it provides correct (statistically unbiased) estimates of the variance components. The other approach would be to set `REML=FALSE`, in which case the method used is ML or maximum likelihood. However, ML generally underestimates the residual variance, thus leading to inflated estimates of the family variance and thus the heritability. ML would be needed e.g. to test fixed effects.
 
 ### c) Compare model fit
 
-Now, let’s explore which model best fits our data. To do this we will use the Akaike Information Criterion (AIC). This statistic scores model fit while giving a  penalty for the number of parameters in a model. The model with the lowest score is the preferred model. 
+Now, let’s explore which model best fits our data. To do this we will use the Akaike Information Criterion (AIC). This statistic scores model fit while giving a  penalty for the number of parameters in a model. The model with the lowest score is the preferred model. We will learn more about model selection with AIC (and related measures like AICc, BIC) in Week 12.
 
 How do we ensure that the AIC values of the different models are comparable? 
 
-- For 'mod1' that was fitted with 'lm', we use the function 'AIC'. 
-- For the other models that were fitted with 'lmer', we use 'extractAIC'. 
+- For `mod1` that was fitted with function `lm'`, we use the function `AIC`. 
+- For the other models that were fitted with `lmer`, we use `extractAIC`. 
 
-For model comparison purposes, we have to use the ML fit, as AIC is no longer valid for REML. The function ‘extractAIC’ refits the models with ‘REML=FALSE’ to obtain AIC values that are comparable between models with different fixed effects (though this does not apply here because the fixed effects were the same), or between models fitted with 'lm' and 'lmer'. It returns two values, the first is the ‘equivalent degrees of freedom’ of the fitted model, and the second is the ‘AIC’ value. Here we only extract the second value.
+For model comparison purposes, we have to use the ML fit, as AIC is not valid for REML (see video). The function `extractAIC` refits the models with ‘REML=FALSE’ to obtain AIC values that are comparable between models with different fixed effects (though this does not apply here because the fixed effects were the same), or between models fitted with functions `lm` and `lmer`. It returns two values, the first is the "equivalent degrees of freedom" of the fitted model, and the second is the "AIC" value. Here we only extract the second value.
+
+Note: the function `extractAIC` does not allow to calculate AICc, which is the AIC with small sample correction (see Week 12). 
 
 ```{R}
 aic_vals <- c(AIC(mod1), extractAIC(mod2)[2], extractAIC(mod3)[2], 
@@ -138,34 +142,35 @@ names(aic_vals) <- c("mod1","mod2","mod3", "mod4")
 aic_vals
 ```
 
-Hence, model 'mod3' (and its equivalent 'mod4') appears to be the best model. This suggests that there are important differences among populations, and among trees within populations.
+Hence, model `mod3` (and its equivalent `mod4`) appears to be the best model. This suggests that there are important differences among populations, and among trees within populations.
 
 We will learn more about model selection later in the course (Week 12).
 
 ### d) Check model validity
 
-Is the model 'mod4' valid? Let's check the residuals. The function 'residplot' from package 'predictmeans' produces four diagnostic plots for a model fitted with 'lmer'. The option 'level' indicates which random factor should be plotted (here: 1 = family, 2 = population). This function uses the 'conditional' residuals, which represent 'observed - fitted(fixed) - fitted(random)'.  
+Is the model `mod4` valid? Let's check the residuals (see video!). 
 
-```{r}
-predictmeans::residplot(mod4, group="population", level=1)
+The function `residplot` from package `predictmeans` produces four diagnostic plots for a model fitted with `lmer`. The option `level` indicates which random factor should be plotted (here: 1 = family, 2 = population). This function uses the "conditional" residuals, which represent `observed - fitted(fixed) - fitted(random)`. The option `newwd=FALSE` specifies that no new window should be created for the plot - this setting is necessary for the knitted R notebook to actually show the figure. 
 
+```{r fig.height=5, fig.width=8}
+predictmeans::residplot(mod4, group="population", level=1, newwd=FALSE)
 ```
 
 Hint: You may need to use the arrow symbols to scroll through the plots in the 'Plot' tab in RStudio.
 
 The plots are:
 
-- A normal probability plot of the random effect 'family': points should follow line.
+- A normal probability plot of the random effect `family`: points should follow line.
 - A normal probability plot of (conditional) residuals: points should follow line.
-- A scatterplot of the (conditional) residuals against fitted values: the plot should not 'thicken' (which would indicate differences in variances between groups such as blocks = heteroscedasticity). Due to the option 'group = "population", residuals are colored by population.
+- A scatterplot of the (conditional) residuals against fitted values: the plot should not "thicken" (which would indicate differences in variances between groups such as blocks = heteroscedasticity). Due to the option `group = "population"`, residuals are colored by population.
 - A plot of fitted values against observed: the scatterplot shows the overall model fit, where points would fall on a line if the model explained 100% of the variation in the response (you can ignore the dashed line).
 
-In addition, we may want to look for outliers and influential points. For this, we create two additional plots. Here we use marginal residuals, which are calculated without accounting for random effects: 'observed - fitted(fixed)'. 
+In addition, we may want to look for outliers and influential points. For this, we create two additional plots. Here we use marginal residuals, which are calculated without accounting for random effects: `observed - fitted(fixed)`. 
 
-- A plot of marginal residuals against the fixed effect 'block': there should not be any large outliers.  
+- A plot of marginal residuals against the fixed effect `block`: there should not be any large outliers.  
 - A plot of Cook's distances, where D > 1 indicates influential points (more relevant when using quantitative predictors (covariates). Note: this may take a while to calculate.
 
-First we calculate the marginal residuals by predicting values with fixed effects only ('re.form=NA') and subtract these fitted values from the observed values.
+First we calculate the marginal residuals by predicting values with fixed effects only (`re.form=NA`) and subtract these fitted values from the observed values.
 
 ```{r}
 marginal.residuals <- mod4@frame$d13c - predict(mod4, re.form=NA)
@@ -176,9 +181,14 @@ plot(cooks.distance(mod4))
 
 The residual plots did not indicate any major problem. Hence we can proceed with interpreting the results.
 
+Note: As an alternative, the R package `DHARMa` uses a simulation-based approach to provide residual diagnostics for hierachical (multi-level / mixed) regression models:
+https://theoreticalecology.wordpress.com/2016/08/28/dharma-an-r-package-for-residual-diagnostics-of-glmms/
+
+
+
 ### e) Estimate variance components
  
-How much of the variation in $d^{13}C$' is explained by the fixed and random effects? In models fitted with 'lm', we use the $R^2$ statistics to describe the total variance in the response explained by all the predictors in the model. In a mixed effects modeling context, there is no longer an obvious definition for $R^2$. Two approximate $R^2$ statistics have been implemented in the function ‘r.squaredGLMM’ from the package ‘MuMIn’ (which stands for multi-model inference):
+How much of the variation in $d^{13}C$' is explained by the fixed and random effects? In models fitted with the function `lm`, we use the $R^2$ statistics to describe the total variance in the response explained by all the predictors in the model. In a mixed effects modeling context, there is no longer an obvious definition for $R^2$. Two approximate $R^2$ statistics have been implemented in the function `r.squaredGLMM` from the package `MuMIn` (which stands for multi-model inference):
 
 - R2m: marginal $R^2$. This is the variance explained by fixed factors. 
 - R2c: conditional $R^2$. This is interpreted as the variance explained by both fixed and random factors, i.e., the entire model.
@@ -189,9 +199,9 @@ In both statistics, the denominator is a sum of the fixed-effects variance, the 
 MuMIn::r.squaredGLMM(mod4)
 ```
 
-The fixed effect 'block' had a small effect of about 2.5%. The total model explained about 23%, most of which was due to the random effects.
+The fixed effect `block` had a small effect of about 2.5%. The total model explained about 23%, most of which was due to the random effects.
 
-How important are the random factors 'population' and 'family'? The summary for 'mod4' lists the variance components under 'Random effects'. 
+How important are the random factors `population` and `family`? The summary for `mod4` lists the variance components under "Random effects". 
 
 
 ```{r}
@@ -202,10 +212,10 @@ Here we extract these variance components from the summary and divide by their s
 
 ```{r}
 fam.var <- nlme::VarCorr(mod4)$"family"[1]
-prov.var <- nlme::VarCorr(mod4)$"population"[1]
+pop.var <- nlme::VarCorr(mod4)$"population"[1]
 res.var <- summary(mod4)$sigma^2
 
-Components <- data.frame(fam.var, prov.var, res.var)
+Components <- data.frame(fam.var, pop.var, res.var)
 Components / sum(Components)
 ```
 
@@ -213,11 +223,11 @@ Compared to Cohen's (1988) effect sizes, population and family each had a medium
 
 ### f) Significance testing
 
-In quantiative genetics, we are more interested in estimating variance components and effects than hypothesis testing. Let's do some testing anyways to see how it works. 
+In quantitative genetics, we are more interested in estimating variance components and the size of effects than in hypothesis testing. In other contexts, however, linear mixed models are often used to test fixed effects while accounting for the random effects. Let's see how this works. 
 
-The confusing part here is that we need to fit the model differentely to test fixed and random effects. For random effects, we can use model 'mod4' that was fitted with 'REML=TRUE'. 
+The confusing part is that we need to fit the model differently to test fixed and random effects (seee video). For testing the random effects, we can use model `mod4` that was fitted with `REML=TRUE`. 
 
-The simplest way to test the significance of a random effect is to calculate the model with and without it and use 'anova()' to test whether the more complex model (listed first) explains significantly more than the simpler model. This implements a likelihood ratio test (LR). By default, when used for a model fitted with 'lmer', 'anova' will refit the models with ML. Here we use the option'refit=FALSE' to prevent this.
+The simplest way to test the significance of a random effect is to calculate the model with and without it and use `anova()` to test whether the more complex model (listed first) explains significantly more than the simpler model. This implements a likelihood ratio test (LR). By default, when used for a model fitted with `lmer`, `anova` will refit the models with ML. Here we use the option `refit=FALSE` to prevent this.
 
 
 ```{r}
@@ -228,34 +238,40 @@ anova(mod4, mod.noPop, refit=FALSE)
 anova(mod4, mod.noFam, refit=FALSE)
 ```
 
-We can do a similar test for the fixed effecs. Here we have only one effect.
+We can do a similar test for the fixed effects (see video). Here we have only one effect. Note that we tell the function `anova` to refit the model with ML (i.e., `REML=FALSE`).
 
 ```{r}
 mod.noBlock <- lmer(d13c ~ 1  + (1 | population) + (1 | family), data=phen, REML=TRUE)
 mod.noFam <- lmer(d13c ~ 1  + (1 | population) + block, data=phen, REML=TRUE)
 anova(mod4, mod.noBlock, refit=TRUE, REML=FALSE)
 ```
+The output shows two lines of results, one for each model that was compared. The last column, with the p-value `Pr(>Chisq)`,  tells us that model `mod4`, with the fixed effect `block`, is statistically significantly better than the simpler model `mod.noBlock` without the fixed effect `block`. This means that the block effect is statistically significant at a significance level of alpha = 0.05 (p-value < alpha).
 
-If we have several fixed effects, it may be more convenient to use function 'Anova' from the 'car' package to perform a Wald chi-square test. However, the model must be fitted with ML. Choose between type II and type II sums of squares (see video).
+We can also base our interpretation on the AIC: model `mod4` has a lower AIC value and is thus considered better than model `mod.noBlock`. (See Week 12 for an introduction to model selection). 
+
+If we have several fixed effects, it may be more convenient to use function `Anova` from the `car` package to perform a Wald chi-square test. However, the model must be fitted with ML. Choose between type II and type II sums of squares (see video).
 
 ```{r}
 mod4.ML <- lmer(d13c ~ 1  + (1 | population) + (1 | family) + block, 
                 data=phen, REML=FALSE)
 car::Anova(mod4.ML, type="II", test.statistic="Chisq")
 ```
+This will return one line per fixed effect, each with a p-value (`Pr(>Chisq)`). We see that the block effect is statistically significant at a significance level of alpha = 0.05 (p-value < alpha).
+
+This result suggests that in the common garden experiment, there were differences in d13c among the seeds that are associated with blocks, i.e., the blocks did not provide exactly the same growing conditions. That is why it is so important to repeat all treatments (here: families) within each block, rather than planting the seeds from one family in one block and the seeds from another family in a different block. Because the common garden experiment was properly designed, we can include the variable `block` in the model to test and account for this effect. We included it as a fixed effect, though if there were six or more blocks, we would include it as a random effect. Either way will work to account for differences between blocks.
 
 ## 3. Estimate trait heritability
 
 **Motivation**: Now that we have learned how to estimate genetic values for $δ^{13}C$, let’s learn how to estimate what fraction of the total variation in trait values is due to genetic effects. More precisely, we shall estimate the heritable proportion of the trait variation. Not all genetic effects are transmitted from one generation to the next, but the so-called additive genetic effects (see Week 6 lecture). Here we have data on half-siblings because seeds come from the same mother tree, but their father is most likely different because our species is wind pollinated. In such family structure, the estimation of the additive genetic variance is straightforward because  these analyses provide key information about whether or not local adaptation should even be considered. Remember that local adaptation is about genetically determined phenotypes that vary across environments in responses to differing selective pressures. This step allows us to assess how genetic variation for a phenotypic trait is distributed across the landscape.
 
-**Goals & Background**: The goal for this part of the laboratory is to estimate heritability, trait differentiation, and correlation with environment for trait values determined in Part 1. To do this, we will be using the output from the previous part of the laboratory and the environmental data contained in the file named "WWP_environmental_data.txt". As with the phenotype file this is a tab-delimited text file.
+**Goals & Background**: The goal for this part of the laboratory is to estimate heritability, trait differentiation, and correlation with environment for trait values determined in Part 1. To do this, we will be using the output from the previous part of the laboratory and the environmental data contained in the file named `WWP_environmental_data.txt`. As with the phenotype file this is a tab-delimited text file.
 
 ### a) Estimate heritability
 
 Let’s start with estimating the heritability of $δ^{13}C$. If you remember from your undergraduate evolution course, heritability refers generally to the proportion of phenotypic variance due to genetic variance. It comes in at least two different versions. The version we are interested in is narrow-sense heritability ($h^2$), which is defined as the ratio of additive genetic variance to total phenotypic variance:
 
 $$h^{2} = \frac{\sigma^{2}_{additive}}{\sigma^{2}_{total}}$$
-We need to extract the variance components from 'mod3' for all model terms. We do this visually by printing mod3 to screen or using a set of functions applied to 'mod3'. Here, we will do both.
+We need to extract the variance components from `mod4` for all model terms. We do this visually by printing mod3 to screen or using a set of functions applied to `mod4`. Here, we will do both.
 
 ```{r}
 mod4
@@ -346,11 +362,11 @@ This 'ecogen' object has information in the following slots:
 
 See 'Week 6 Bonus Material' for calculating Fst from the SNP data.
 
-Here, we will use the 'QstFstComp' library to formally test whether or not $Q_{ST} > F_{ST}$ for $δ^{13}C$. The function 'QstFstComp' from the package with the same name calculates both $Q_{ST}$ and $F_{ST}$ itself, then tests whethere they are different from each other.
+Here, we will use the `QstFstComp` package to formally test whether or not $Q_{ST} > F_{ST}$ for $δ^{13}C$. The function `QstFstComp` from the package with the same name calculates both $Q_{ST}$ and $F_{ST}$ itself, then tests whether they are different from each other.
 
 Note: as this is a permutation test, if you run it several times, the results may change slightly from run to run. 
 
-First, however, we need to re-format the data to the format that 'QstFstComp' expects. This is easy with the function 'ecogen2hierfstat'.
+First, however, we need to re-format the data to the format that `QstFstComp` expects. This is easy with the function `ecogen2hierfstat`.
 
 ```{r}
 WWP.hierfstat <- EcoGenetics::ecogen2hierfstat(WWP.ecogen, pop='population', 
@@ -369,16 +385,16 @@ QstFst_out
 
 The output contains the following elements:
 
-- '[[1]]': The calculated difference between Qst and Fst, with 95% critical values of the distribution of the distribution under the null hypothesis of no difference.
-- '[[2]]': an output file name (though we suppressed the writing of this file with the option 'output="consise_nowrite")'
-- '[[3]]': p-values for a hypothesis test with H0: $Q_{ST} = F_{ST}$, with three different alternatives ('less', 'greater', 'two.sided')
-- '[[4]]': the Fst value estimated from the data with 95% confidence intervals.
-- '[[5]]': the Qst value estimated from the data with 95% confidence intervals.
-- '[[6]]': the additive genetic variance for the trait with 95% confidence intervals.
+- `[[1]]`: The calculated difference between Qst and Fst, with 95% critical values of the distribution of the distribution under the null hypothesis of no difference.
+- `[[2]]`: an output file name (though we suppressed the writing of this file with the option `output="consise_nowrite"`)
+- `[[3]]`: p-values for a hypothesis test with H0: $Q_{ST} = F_{ST}$, with three different alternatives (`less`, `greater`, `two.sided`)
+- `[[4]]`: the Fst value estimated from the data with 95% confidence intervals.
+- `[[5]]`: the Qst value estimated from the data with 95% confidence intervals.
+- `[[6]]`: the additive genetic variance for the trait with 95% confidence intervals.
 
-Note: the values are somewhat different from what we calculated, most likely because the function 'QstFstComp' did not account for the block effect.
+Note: the values are somewhat different from what we calculated, most likely because the function `QstFstComp` did not account for the block effect.
 
-**Questions:** Inspect the first and third elements of the list 'QstFst_out': 
+**Questions:** Inspect the first and third elements of the list `QstFst_out`: 
 
 - For the observed values, is $Q_{ST} > F_{ST}$? 
 - Which alternative is most appropriate here?
@@ -393,23 +409,19 @@ Note: the values are somewhat different from what we calculated, most likely bec
 
 ### a) Describe and extract effects
 
-Which blocks, populations or trees had higher mean d13c values than others? To answer this question, we extract and plot the fixed and random effects. We'll start with the fixed effect for 'block'. 
+Which blocks, populations or trees had higher mean d13c values than others? To answer this question, we extract and plot the fixed and random effects. We'll start with the fixed effect for `block`. 
 
-The effects are not simply the mean of all seedlings from the same block, but the marginal effect of 'block', i.e., estimates of the mean per block after accounting for all other effects (i.e., keeping population and family constant). 
+The effects are not simply the mean of all seedlings from the same block, but the marginal effect of block`, i.e., estimates of the mean per block after accounting for all other effects (i.e., keeping population and family constant). 
 
-There are two ways to extract the block effects. The first is with function 'fixef'. This treats the first level of 'block' as a reference level and uses it to estimate the global intercept, then expresses the effect of the other blocks as deviations from the first block. 
+There are two ways to extract the block effects. The first is with function `fixef`. This treats the first level of `block` as a reference level and uses it to estimate the global intercept, then expresses the effect of the other blocks as deviations from the first block. 
 
 ```{r}
 lme4::fixef(mod4)
 ```
 
-A more convenient way to extract the effects is with function 'ggeffect' of the package 'ggeffects'. 
-
-Note: The package 'ggeffects' is not automatically imported with 'LandGenCourse' to avoid incompatibility issues. You can install by runing 'install.packages("ggeffects")' below without '#'. 
+A more convenient way to extract the effects is with function `ggeffect` of the package `ggeffects`. 
 
 ```{r}
-# install.packages("ggeffects")
-
 ggeffects::ggeffect(mod4, terms=c("block"))
 ```
 
@@ -417,15 +429,15 @@ The table lists the predicted d13c value for each block (accounting for populati
 
 Now let's plot the effects (mean with 95% confidence interval) for each random factor, accounting for all other factors. Again, these are not simply means of observed traits values but marginal effect, accounting for all other factors in the model. 
 
-Note: If the plots appear in the 'Plot' tab in RStudio, use the arrows to scroll between plots.
+Note: If the plots appear in the "Plot" tab in RStudio, use the arrows to scroll between plots.
 
 ```{r}
 lattice::dotplot(ranef(mod4,condVar=TRUE))
 ```
 
-We can see that there are considerable differences between populations, where 'blk cyn' has the highest, and 'mt watson' the lowest mean. 
+We can see that there are considerable differences between populations, where "blk cyn" has the highest, and "mt watson" the lowest mean. 
 
-We can extract the values with 'ranef'. Again, they are deviations from the global intercept (block 1). We are now ready to correlate the population effect to the environmental data.
+We can extract the values with `ranef`. Again, they are deviations from the global intercept (block 1). We are now ready to correlate the population effect to the environmental data.
 
 ```{r}
 prov.eff <- lme4::ranef(mod4)$population
@@ -436,7 +448,7 @@ head(fam.eff)
 
 ### b) Correlation of population effect with environment
 
-We have population effects estimated for 10 populations, and bioclimatic data for 30 plots (3 plots x 10 populations). If we used all 157 rows of the site data set, this would inflate our sample size. To avoid this, we first extract 30 unique rows (one per plot) from the site data 'WWP.ecogen@E'. Then we use' match' to find for each plot the corresponding population. This returns the row number ('index') and we use it to extract the corresponding population effect.
+We have population effects estimated for 10 populations, and bioclimatic data for 30 plots (3 plots x 10 populations). If we used all 157 rows of the site data set, this would inflate our sample size. To avoid this, we first extract 30 unique rows (one per plot) from the site data `WWP.ecogen@E`. Then we use `match` to find for each plot the corresponding population. This returns the row number (`index`) and we use it to extract the corresponding population effect.
 
 ```{r}
 Plot.data <- dplyr::distinct(data.frame(WWP.ecogen@E, 
