Revised Week 7 Bonus

--- a/vignettes/Week7_Spatial_Linear_Models/Week7_bonus.Rmd
+++ b/vignettes/Week7_Spatial_Linear_Models/Week7_bonus.Rmd
@@ -15,17 +15,29 @@ vignette: >
 ---
 ## 1. Overview of Bonus Materials
 
-This bonus vignette has four parts
+The Week 7 Worked Example used patch-level values of an Si index as predictors. Here we show how these were calculated from distance matrices. The main steps are:
 
-- Calculation of the Si index variables for the `Dianthus` data
-- Analysis of the `Dianthus` data with MLPE
-- Accounting for spatial autocorrelation when fitting the MLPE
+- Import ecological distance matrices
+- Optimize the scaling parameter alpha
+- Calculate Hanski's index Si with source patch parameters
 
-## 2. Calculation of the Si index variables for the Dianthus data
+The following data will be imported:
 
-The Week 7 Worked Example used patch-level values of an Si index as predictors. Here we show how these were calculated from distance matrices. 
+- **dModels.rds**: a list of 5 distance matrices (stored as `dist` objects) among all 106 calcareous grassland patches in the study area. Each distance matrix represents a biological hypothesis about functional connectivity of *D. carthusianorum* (see below).
+- **PATCH_XY_Dianthus.csv**: data frame with patch attributes for all 106 calcareous grassland patches in the study area. We will use the following attributes:
+  - **Dc.89, Dc.09**: binary variables indicating whether or not *D. carthusianorum* was recorded in the patch in the first survey in 1989, or the second survey in 2009, respectively.
+  - **Ha**: patch area in ha.
+  - **pop09**: population size in 2009 (categorical, 4 levels, see below).
 
-### a) Import ecological distance matrices
+```{r}
+library(tibble)
+library(dplyr)
+library(LandGenCourse)
+
+```
+
+
+## 2. Import ecological distance matrices
 
 Each distance matrix represents one hypothesis about gene flow in this system (see Week 7 video). 
 
@@ -37,26 +49,27 @@ Each distance matrix represents one hypothesis about gene flow in this system (s
 
 Here, we import these distance matrices as a list of `dist` objects and check their names and dimensions: each has 106 rows and columns.  
 
-HW: ADJUST PATH! Include dataset in LandGenCourse
-
 ```{r}
-dModels <- readRDS(file=paste0(here::here(), 
-              "/vignettes/Week7_Spatial_Linear_Models/dModels.rds"))     
-sapply(dModels, function(ls) dim(as.matrix(ls)))
+dModels <- readRDS(system.file("extdata", "dModels.rds", 
+                            package = "LandGenCourse")) 
+
+lapply(dModels, function(ls) dim(as.matrix(ls)))
 ```
 Note: the distance matrices contain 106 patches. All of these are considered as source populations. However, we will only calculate Si indices for the 65 patches included in the Dianthus dataset. 
 
-### b) Optimize scaling parameter alpha
+## 3. Optimize the scaling parameter alpha
 
 In order to calculate Hanski's index, we first need to optimize the value of alpha for each distance model, using presence-absence data for the two time steps of 1989 and 2009. 
 
 Import the patch-level data for all 106 patches in the study area.
 
-HW CHECK PATH
 ```{r}
-Patches <- read.csv(paste0(here::here(),                                "/vignettes/Week7_Spatial_Linear_Models/PATCH_XY_Dianthus.csv"),
+Patches <- read.csv(system.file("extdata", "PATCH_XY_Dianthus.csv", 
+                            package = "LandGenCourse"),
          header=TRUE, row.names=1)
+tibble::as_tibble(Patches)
 ```
+
 Check that the patch IDs match between `Patches` and the distance matrices. Here we tabulate the number of rows for which the patch names match perfectly. This is the case for all 106 rows, which is great.
 
 ```{r}
@@ -68,10 +81,10 @@ The function 'get.alphafit' optimizes alpha for each model and stores the values
 - First, we create an empty matrix (with a single column and five rows, one per model) to hold the optimized alpha value for each model (i.e., for each distance matrix).
 - We define the list of values of alpha that should be considered. Here we will use `nseq=100` values between 0.1 and 2.5.
 - Then we define the function get.alphafit that will take four arguments:
-  - alpha: scaling parameter of the exponential function
-  - d: distance matrix
-  - pj: whether or not the species was recorded in a patch in the second survey.
-  - Op: number of surveys (out of two) that the species was recorded in the patch.
+  - `alpha`: scaling parameter of the exponential function
+  - `d`: distance matrix
+  - `pj`: whether or not the species was recorded in a patch in the second survey.
+  - `Op`: number of surveys (out of two) that the species was recorded in the patch.
 
 ```{r}
 table.alpha <- matrix(NA, nrow=5)
@@ -104,11 +117,11 @@ for(m in 1:length(dModels))
 table.alpha
 ``` 
 
-These are the optimized scaling parameters alpha of the distance term in the incidence function $S_{i}$, where $p_{j}$ is 1 if the species is present in source population j and 0 if it is absent, and $d_{ij}$ is the pairwise distance between source patch j and focal patch i: 
+These are the optimized scaling parameters alpha of the distance term (related to dispersal ability) in the incidence function $S_{i}$, where $p_{j}$ is 1 if the species is present in source population j and 0 if it is absent, and $d_{ij}$ is the pairwise distance between source patch j and focal patch i: 
 
 $S_{i}$ = $\sum_{j\neq i} exp(-\alpha d_{ij})p_{j}$
 
-### c) Calculate Hanski's index Si with source patch parameters
+## 4. Calculate Hanski's index Si with source patch parameters
 
 We will consider there alternative source patch parameters
 
@@ -132,21 +145,16 @@ Compile three alternative source patch parameters for each patch. Note that we s
 
 ```{r}
 Source<- data.matrix(data.frame(pj=pj, Aj=pj*Aj, Nj=Nj))
-     mod<-rep(1:5, rep(3,5))
+mod <-rep(1:5, rep(3,5))
 ```
 
 Prepare an empty table Si to hold the connectivity indices $S_{i}$, one for each combination of focal patch *i* (rows), distance model $d_{ij}$ and source patch parameter (15 columns: 5 distances x 3 parameters).
 
 ```{r}
-Si <- data.frame(matrix(NA,nrow(patches),ncol=15))
-     dimnames(Si) <- list(row.names(patches),
+Si <- data.frame(matrix(NA,nrow(Patches),ncol=15))
+     dimnames(Si) <- list(row.names(Patches),
      paste(rep(names(dModels), rep(3,5)), 
            rep(c("pj", "Aj", "Nj"),5), sep="_"))
-```
-
-
-```{r}
-
 ```
 
 Define function `get.Si` with three arguments:
@@ -171,159 +179,19 @@ Apply function `get.Si` to calculate `Si` values. `sb` indicates which column of
 sb <- rep(1:3,5)
 for (n in 1:ncol(Si))
 {
-  Si[,n] <- get.Si(alpha=table.alpha[mod[n]], d=dModels[[mod[n]]],
+  Si[,n] <- get.Si(alpha=table.alpha[mod[n]], 
+                   d=as.matrix(dModels[[mod[n]]]),
                    Ap=Source[,sb[n]])
 }
 ``` 
 
-Table with results Si. Column names are a combination of distance matrix and source patch parameter.
+Table with results: values of Si. Column names are a combination of distance matrix and source patch parameter.
 
 ```{r}
-head(Si)  
+tibble::as_tibble(Si)  
 ``` 
 
-
-## 3.  Analysis of the Dianthus data with MLPE
-
-### a) Prepare the data (SIMPLIFY THIS)
-
-Import genetic data into gstudio:
-
-HW: CHECK PATH
-```{r}
-GenData.gstudio <- read_population("~/Desktop/R_GitHub_Projects/DGS_LG_Labs/vignettes/Week7_Spatial_Linear_Models/Dianthus_carthusianorum_genodata_Dec15_2013_NA.csv", locus.columns=c(6:27), type="column")
-```
-
-Convert to genind object:
-```{r}
-Dianthus.genind <- adegenet::df2genind(X=GenData.gstudio[,c(6:16)], 
-                    sep=":", ncode=NULL, ind.names=GenData.gstudio$SampleID., 
-                    loc.names=NULL, pop=GenData.gstudio$PatchID, 
-                    NA.char="", ploidy=2, type="codom", 
-                    strata=NULL, hierarchy=NULL)
-```
-
-Convert to genpop and calculate chord distance Dc:
-```{r}
-Dianthus.genpop <- genind2genpop(Dianthus.genind)
-Dc <- as.matrix(dist.genpop(Dianthus.genpop, method=2))
-```
-
-Define subset of rows of distance matrices for which genetic distances are available:
-```{r}
-a <- rep(NA, nrow(Dgen))
-for(i in 1:nrow(Dgen))
-{
-  #a[i] <- grep(rownames(Dgen)[i], rownames(dModels$Eu))
-  a[i] <- which(is.element(rownames(dModels$Eu), rownames(Dgen)[i]))
-}
-table(rownames(Dc) == rownames(dModels$Eu)[a])
-```
-
-### b) Create pairwise dataset
-
-Here we create a dataset where each row represents a unique pair of populations.
-
-```{r}
-tmp <- matrix(rownames(Dc), nrow(Dc), nrow(Dc))
-Pairs <- data.frame(pop1 = tmp[lower.tri(Dc)], 
-           pop2 = tmp[upper.tri(Dc)], 
-           Dc = Dc[lower.tri(Dc)],
-           Eu = dModels$Eu[a,a][lower.tri(dModels$Eu[a,a])],
-           Shecte = dModels$Shecte[a,a][lower.tri(dModels$Shecte[a,a])],
-           Sheint = dModels$Sheint[a,a][lower.tri(dModels$Sheint[a,a])],
-           Shenu = dModels$Shenu[a,a][lower.tri(dModels$Shenu[a,a])], 
-           Forest = dModels$Forest[a,a][lower.tri(dModels$Forest[a,a])])
-```
-
-```{r}
-with(Pairs, plot(Eu, Dc))
-```
-
-Create the Zl and ZZ matrices:
-
-```{r}
-Zl <- lapply(c("pop1","pop2"), function(nm) 
-  Matrix:::fac2sparse(Pairs[[nm]], "d", drop=FALSE))
-ZZ <- Reduce("+", Zl[-1], Zl[[1]])
-```
-
-Function MLPE (Week 12) (REML: Not needed?)
-
-```{r}
-MLPE <- function(variables, data) {
-  mod2 <- lme4::lFormula(variables, data = data, REML = TRUE)
-  dfun <- do.call(lme4::mkLmerDevfun, mod2)
-  opt <- lme4::optimizeLmer(dfun)
-  mod_2 <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
-  mod2$reTrms$Zt <- ZZ
-
-# Refit the model
-  dfun <- do.call(lme4::mkLmerDevfun, mod2)
-  opt <- lme4::optimizeLmer(dfun)
-  modelout <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
-  return(modelout)
-}
-```
-
-REML: Not needed?
-```{r}
-mod1 <- MLPE(Dc ~ Eu + (1|pop1), Pairs)
-mod2 <- MLPE(Dc ~ Shecte + (1|pop1), Pairs)
-mod3 <- MLPE(Dc ~ Sheint + (1|pop1), Pairs)
-mod4 <- MLPE(Dc ~ Shenu + (1|pop1), Pairs)
-#mod5 <- MLPE(Dc ~ Forest + (1|pop1), Pairs)
-```
-
-```{r}
-MLPEnoREML <- function(variables, data) {
-  mod2 <- lme4::lFormula(variables, data = data, REML = FALSE)
-  dfun <- do.call(lme4::mkLmerDevfun, mod2)
-  opt <- lme4::optimizeLmer(dfun)
-  mod_2 <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
-  mod2$reTrms$Zt <- ZZ
-
-# Refit the model
-  dfun <- do.call(lme4::mkLmerDevfun, mod2)
-  opt <- lme4::optimizeLmer(dfun)
-  modelout <- lme4::mkMerMod(environment(dfun), opt, mod2$reTrms,fr = mod2$fr)
-  return(modelout)
-}
-```
-
-```{r}
-mod1noREML <- MLPEnoREML(Dc ~ Eu + (1|pop1), Pairs)
-mod2noREML <- MLPEnoREML(Dc ~ Shecte + (1|pop1), Pairs)
-mod3noREML <- MLPEnoREML(Dc ~ Sheint + (1|pop1), Pairs)
-mod4noREML <- MLPEnoREML(Dc ~ Shenu + (1|pop1), Pairs)
-#mod5noREML <- MLPEnoREML(Dc ~ Forest + (1|pop1), Pairs)
-mod5noREML <- MLPEnoREML(Dc ~ I(Eu * (Shenu==100)) + 
-                              I(Shecte * (Shenu==1)) +(1|pop1), Pairs)
-mod6noREML <- MLPEnoREML(Dc ~ I(Eu * (Shenu==100)) + 
-                              I(Sheint * (Shenu==1)) +(1|pop1), Pairs)
-```
-
-```{r}
-Models <- list(Eu=mod1noREML, Shecte=mod2noREML, Sheint=mod3noREML, 
-               Shenu=mod4noREML, Eu_Shecte=mod5noREML, Eu_Sheint=mod6noREML)
-Dianthus.IC <- data.frame(AIC = sapply(Models, AIC),
-                     BIC = sapply(Models, BIC)) 
-Dianthus.IC
-```
-```{r}
-with(Pairs, plot(Shecte, Dc))
-with(Pairs, plot(I(Sheint * (Shenu==1)), Dc))
-with(Pairs, plot(I(Eu * (Shenu==100)), Dc))
-
-```
-
-
-### b) 
-
-## 4.  Accounting for spatial autocorrelation when fitting the MLPE
-
-
-
+Note: the dataset `Dianthus` used in the Week 7 Worked Example only contains Si values for 65 patches with genetic data (i.e., the patches where *D. carthusianorum* was observed, and sampled, during the second survey 2009). 
 
 ```{r message=FALSE, warning=TRUE, include=FALSE}
 LandGenCourse::detachAllPackages()
