Added Week 10 bonus

--- a/vignettes/Week7_Spatial_Linear_Models/Week7_bonus_vignette.Rmd
+++ b/vignettes/Week7_Spatial_Linear_Models/Week7_bonus_vignette.Rmd
@@ -29,11 +29,10 @@ The following data will be imported:
   - **Ha**: patch area in ha.
   - **pop09**: population size in 2009 (categorical, 4 levels, see below).
 
-```{r}
-library(tibble)
+```{r message=FALSE, warning=FALSE}
+#library(tibble)
 library(dplyr)
 library(LandGenCourse)
-
 ```
 
 
